# rust_web

./: .env  Cargo.toml  sqlx-data.json  study.txt
configuration/: base.yaml  local.yaml
migrations/: 20250923070801_create_test_table.sql  20250923072445_insert_test_table.sql  20251015072107_create_users_table.sql  20251015082147_create_table_users.sql  20251015082412_alter_table_users.sql
scripts/: init_db.sh  설명서.txt
src/: configuration.rs  error.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/auth/: mod.rs
src/auth/jwt/: jwt_service.rs  mod.rs
src/auth/middleware/: jwt_middleware.rs  mod.rs  session_middleware.rs
src/auth/session/: mod.rs  session_state.rs
src/jwt/: middleware.rs  mod.rs
src/routes/: mod.rs
src/routes/login/: form.rs  home.html  home.rs  login_process.rs  mod.rs  process.rs  registration.rs  validate_jwt.rs  validate_session.rs
src/routes/table_contents/: ch1_tracing.rs  form.rs  mod.rs
src/routes/table_contents/ch1_tracing/: ch1_1_basic.rs  mod.rs
src/session/: middleware.rs  mod.rs
static/css/: popup.css  style.css
static/js/: app.js  notification.js  process_login.js  registration.js
static/js/common/: app.js  notification.js
static/js/pages/: process_login.js  registration.js
templates/: 404.html  ch1_1_basic.html  login_redirect.html  login_success.html  table_contents.html
templates/ch1_1/: n1_basic.html  n2_settings.html  n3_span_event.html
templates/ch1_2/: n1_basic.html  n2_example.html
templates/login/: home.html  registration.html  success.html
tests/api/: helpers.rs  login.rs  main.rs
